修正  - 前台新模板方案初定
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new_ui/index.htm
+++ b/new_ui/index.htm
@@ -5,9 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
         <link rel="stylesheet" type="text/css" href="./new31/css.css">
-        <title>
-            31客 - 源自欧洲经典口味！
-        </title>
+        <title>31客 - 源自欧洲经典口味！</title>
         <script type="text/javascript" src="./new31/jquery.min.js"></script>
         <script type="text/javascript" src="./new31/comm.js"></script>
         <script type="text/javascript" src="./new31/sides.js"></script>
@@ -26,15 +24,15 @@
                     <a href="/cart/">购物车</a>
                     <a href="/account/login/">登录</a>
                 </dd>
-                <div class="clear"></div>
+                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->  
             </dl>
         </div>
         <div id="main">
-            <dl class="mti" id="logo">
-                <dt><a href="/new/" title="31客">31KECAKE</a></dt>
-                <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-            </dl>
-            <div id="middle">
+            <div id="top">
+                <dl class="mti" id="logo">
+                    <dt><a href="/new/" title="31客">31KECAKE</a></dt>
+                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
+                </dl>
                 <ul class="menu">
                     <li>
                         <a class="on" href="/new/index.htm#logo">首页</a>
@@ -52,21 +50,14 @@
                         <a href="/new/index.htm#pie">派</a>
                     </li>
                 </ul>
+            </div>
+            <div id="middle">
                 <div id="bner">
                     <div id="imgPlay">
                         <ul class="imgs" id="actor">
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13679842939718.jpg"></a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13804379429741.jpg"></a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13804380515243.jpg"></a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13743081906304.jpg"></a>
-                            </li>
+                            <li><a href="/" target="_blank"><img src="./new31/13679842939718.jpg"></a></li>
+                            <li><a href="/" target="_blank"><img src="./new31/13804380515243.jpg"></a></li>
+                            <li><a href="/" target="_blank"><img src="./new31/13743081906304.jpg"></a></li>
                         </ul>
                         <div class="num" style="left: 394px;">
                             <p class="mc" style="width: 72px;">
@@ -215,14 +206,14 @@
                 </div>
                 <div class="more"><a href="/tag/pie/">更多...</a></div>
             </div>
-            <div class="clear">
-            </div>
             <div id="ft">
                 <dl id="foot">
-                    <dd>Tel：<a href="/home/about/">0771-5676920 0771-5676753</a></dd>
-                    <div class="clear"></div>
+                    <dt><a href="/home/about/">关于31客</a></dt>
+                    <dd>Tel：0771-5676920 0771-5676753</dd>
+                    <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
                 </dl>
             </div>
+            <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
         </div>
     </body>
 </html>
