--- a/new_ui/about.htm
+++ b/new_ui/about.htm
@@ -5,9 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
         <link rel="stylesheet" type="text/css" href="./new31/css.css">
-        <title>
-            31客 - 源自欧洲经典口味！
-        </title>
+        <title>31客 - 源自欧洲经典口味！</title>
         <script type="text/javascript" src="./new31/jquery.min.js"></script>
         <script type="text/javascript" src="./new31/comm.js"></script>
         <script type="text/javascript" src="./new31/sides.js"></script>
@@ -26,15 +24,15 @@
                     <a href="/cart/">购物车</a>
                     <a href="/account/login/">登录</a>
                 </dd>
-                <div class="clear"></div>
+                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->  
             </dl>
         </div>
         <div id="main">
-            <dl class="mti" id="logo">
-                <dt><a href="/new/" title="31客">31KECAKE</a></dt>
-                <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-            </dl>
-            <div id="middle">
+            <div id="top">
+                <dl class="mti" id="logo">
+                    <dt><a href="/new/" title="31客">31KECAKE</a></dt>
+                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
+                </dl>
                 <ul class="menu">
                     <li>
                         <a class="on" href="/new/index.htm#logo">首页</a>
@@ -52,177 +50,43 @@
                         <a href="/new/index.htm#pie">派</a>
                     </li>
                 </ul>
-                <div id="bner">
-                    <div id="imgPlay">
-                        <ul class="imgs" id="actor">
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13679842939718.jpg"></a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13804379429741.jpg"></a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13804380515243.jpg"></a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank"><img src="./new31/13743081906304.jpg"></a>
-                            </li>
-                        </ul>
-                        <div class="num" style="left: 394px;">
-                            <p class="mc" style="width: 72px;">
-                            </p>
-                        </div>
-                        <div class="num" id="numInner" style="width: 72px; left: 407px;">
-                            <span class="">
-                            </span>
-                            <span class="">
-                            </span>
-                            <span class="">
-                            </span>
-                            <span class="">
-                            </span>
+            </div>
+            <div id="middle">
+                <div id="right">
+                    <div id="show">
+                        <div id="m_i">
+                            <span id="result"></span>
+                            <form action="" method="post">
+                                <table width="670" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td colspan="2">输入订单号查询订单状态</td>
+                                    </tr>
+                                    <tr>
+                                        <td align="right">订单号：</td>
+                                        <td><input type="text" id="onum" name="onum" class="input" /></td>
+                                    </tr>
+                                    <tr>
+                                        <td>&nbsp;</td>
+                                        <td>
+                                            <input type="button" value="" class="btn_cx" onClick="return chekq(this)" />
+                                            <input type="hidden" name="action" value="query" />
+                                            <input type="hidden" name="class" value="22" />
+                                        </td>
+                                    </tr>
+                                </table>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <dl class="mti" id="cake">
-                    <dt>CAKE</dt>
-                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-                </dl>
-                <ul class="menu">
-                    <li>
-                        <a href="/new/index.htm#logo">首页</a>
-                    </li>
-                    <li>
-                        <a class="on" href="/new/index.htm#cake">蛋糕</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#cookie">曲奇</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#chocolate">巧克力</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#pie">派</a>
-                    </li>
-                </ul>
-                <div class="lsv">
-                    <a href=""><img src="./new31/13736245379911.jpg" data-url="/UploadFiles/20130712/13736245379911.jpg" title="巧克力酱球" style=""></a>
-                    <a href="/"><img src="./new31/13738608759264.jpg" data-url="/UploadFiles/20130715/13738608759264.jpg" title="黑&amp;白" style=""></a>
-                    <a href="/"><img src="./new31/13738609147394.jpg" data-url="/UploadFiles/20130715/13738609147394.jpg" title="黑方" style=""></a>
-                    <a href=""><img src="./new31/1373624631806.jpg" data-url="/UploadFiles/20130712/1373624631806.jpg" title="巧克力英文文字图" style=""></a>
-                    <a href="/"><img src="./new31/13738616471004.jpg" data-url="/UploadFiles/20130715/13738616471004.jpg" title="黑森林" style="float:right;"></a>
-                    <a href=""><img src="./new31/13738616151536.jpg" data-url="/UploadFiles/20130715/13738616151536.jpg" title="巧克力条" style=""></a>
-                    <a href="/"><img src="./new31/13738616747156.jpg" data-url="/UploadFiles/20130715/13738616747156.jpg" title="杏仁巧克力" style=""></a>
-                    <a href="/"><img src="./new31/13738617233898.jpg" data-url="/UploadFiles/20130715/13738617233898.jpg" title="歌剧" style=""></a>
-                    <a href="/"><img src="./new31/13738617458376.jpg" data-url="/UploadFiles/20130715/13738617458376.jpg" title="巧克力提拉" style=""></a>
-                    <a href="/"><img src="./new31/13738617684119.jpg" data-url="/UploadFiles/20130715/13738617684119.jpg" title="布朗尼" style=""></a>
-                </div>
-                <div class="more"><a href="/tag/cake/">更多...</a></div>
-                <dl class="mti" id="cookie">
-                    <dt>COOKIE</dt>
-                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-                </dl>
-                <ul class="menu">
-                    <li>
-                        <a href="/new/index.htm#logo">首页</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#cake">蛋糕</a>
-                    </li>
-                    <li>
-                        <a class="on" href="/new/index.htm#cookie">曲奇</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#chocolate">巧克力</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#pie">派</a>
-                    </li>
-                </ul>
-                <div class="lsv">
-                    <a href="/"><img src="./new31/13738628662144.jpg" data-url="/UploadFiles/20130715/13738628662144.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738628864422.jpg" data-url="/UploadFiles/20130715/13738628864422.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736248085549.jpg" data-url="/UploadFiles/20130712/13736248085549.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736248312318.jpg" data-url="/UploadFiles/20130712/13736248312318.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738629037259.jpg" data-url="/UploadFiles/20130715/13738629037259.jpg" style="float:right;"></a>
-                    <a href=""><img src="./new31/13738629754790.jpg" data-url="/UploadFiles/20130715/13738629754790.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736248574566.jpg" data-url="/UploadFiles/20130712/13736248574566.jpg" style=""></a>
-                </div>
-                <div class="more"><a href="/tag/cookie/">更多...</a></div>
-                <dl class="mti" id="chocolate">
-                    <dt>CHOCOLATE</dt>
-                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-                </dl>
-                <ul class="menu">
-                    <li>
-                        <a href="/new/index.htm#logo">首页</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#cake">蛋糕</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#cookie">曲奇</a>
-                    </li>
-                    <li>
-                        <a class="on" href="/new/index.htm#chocolate">巧克力</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#pie">派</a>
-                    </li>
-                </ul>
-                <div class="lsv">
-                    <a href="/"><img src="./new31/13738619058052.jpg" data-url="/UploadFiles/20130715/13738619058052.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738619536204.jpg" data-url="/UploadFiles/20130715/13738619536204.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736251408095.jpg" data-url="/UploadFiles/20130712/13736251408095.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736251811199.jpg" data-url="/UploadFiles/20130712/13736251811199.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738620062092.jpg" data-url="/UploadFiles/20130715/13738620062092.jpg" style="float:right"></a>
-                    <a href="/"><img src="./new31/13738620435036.jpg" data-url="/UploadFiles/20130715/13738620435036.jpg" style=""></a>
-                    <a href="/"><img src="./new31/1373862161576.jpg" data-url="/UploadFiles/20130715/1373862161576.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738622176590.jpg" data-url="/UploadFiles/20130715/13738622176590.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738623022765.jpg" data-url="/UploadFiles/20130715/13738623022765.jpg" style=""></a>
-                    <a href=""><img src="./new31/1373625248513.jpg" data-url="/UploadFiles/20130712/1373625248513.jpg" style=""></a>
-                </div>
-                <div class="more"><a href="/tag/chocolate/">更多...</a></div>
-                <dl class="mti" id="pie">
-                    <dt>PIE</dt>
-                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-                </dl>
-                <ul class="menu">
-                    <li>
-                        <a href="/new/index.htm#logo">首页</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#cake">蛋糕</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#cookie">曲奇</a>
-                    </li>
-                    <li>
-                        <a href="/new/index.htm#chocolate">巧克力</a>
-                    </li>
-                    <li>
-                        <a class="on" href="/new/index.htm#pie">派</a>
-                    </li>
-                </ul>
-                <div class="lsv">
-                    <a href="/"><img src="./new31/1373862457642.jpg" data-url="/UploadFiles/20130715/1373862457642.jpg" style=""></a>
-                    <a href="/"><img src="./new31/1373862478225.jpg" data-url="/UploadFiles/20130715/1373862478225.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736249661235.jpg" data-url="/UploadFiles/20130712/13736249661235.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736249424812.jpg" data-url="/UploadFiles/20130712/13736249424812.jpg" style=""></a>
-                    <a href="/"><img src="./new31/13738625287697.jpg" data-url="/UploadFiles/20130715/13738625287697.jpg" style="float:right"></a>
-                    <a href="/"><img src="./new31/13738625469318.jpg" data-url="/UploadFiles/20130715/13738625469318.jpg" style=""></a>
-                    <a href=""><img src="./new31/13736250118174.jpg" data-url="/UploadFiles/20130712/13736250118174.jpg" style=""></a>
-                </div>
-                <div class="more"><a href="/tag/pie/">更多...</a></div>
-            </div>
-            <div class="clear">
             </div>
             <div id="ft">
                 <dl id="foot">
-                    <dd>Tel：<a href="/home/about/">0771-5676920 0771-5676753</a></dd>
-                    <div class="clear"></div>
+                    <dt><a href="/home/about/">关于我们</a></dt>
+                    <dd>Tel：0771-5676920 0771-5676753</dd>
+                    <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
                 </dl>
             </div>
+            <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
         </div>
     </body>
 </html>
