--- a/new_ui/query.htm
+++ b/new_ui/query.htm
@@ -5,9 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
         <link rel="stylesheet" type="text/css" href="./new31/css.css">
-        <title>
-            31客 - 源自欧洲经典口味！
-        </title>
+        <title>31客 - 源自欧洲经典口味！</title>
         <script type="text/javascript" src="./new31/jquery.min.js"></script>
         <script type="text/javascript" src="./new31/comm.js"></script>
         <script type="text/javascript" src="./new31/sides.js"></script>
@@ -26,38 +24,49 @@
                     <a href="/cart/">购物车</a>
                     <a href="/account/login/">登录</a>
                 </dd>
-                <div class="clear"></div>
+                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->  
             </dl>
         </div>
         <div id="main">
-            <dl class="mti" id="logo">
-                <dt><a href="/new/" title="31客">31KECAKE</a></dt>
-                <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
-            </dl>
+            <div id="top">
+                <dl class="mti" id="logo">
+                    <dt><a href="/new/" title="31客">31KECAKE</a></dt>
+                    <dd><!-- <img src="./new31/13741335652678.jpg" width="150" height="86"/> --></dd>
+                </dl>
+                <ul class="menu">
+                    <li>
+                        <a class="on" href="/new/index.htm#logo">首页</a>
+                    </li>
+                    <li>
+                        <a href="/new/index.htm#cake">蛋糕</a>
+                    </li>
+                    <li>
+                        <a href="/new/index.htm#cookie">曲奇</a>
+                    </li>
+                    <li>
+                        <a href="/new/index.htm#chocolate">巧克力</a>
+                    </li>
+                    <li>
+                        <a href="/new/index.htm#pie">派</a>
+                    </li>
+                </ul>
+            </div>
             <div id="middle">
                 <div id="right">
                     <div id="show">
                         <div id="m_i">
-                            <span id="result">
-                            </span>
+                            <span id="result"></span>
                             <form action="" method="post">
                                 <table width="670" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td colspan="2">
-                                            输入订单号查询订单状态
-                                        </td>
+                                        <td colspan="2">输入订单号查询订单状态</td>
                                     </tr>
                                     <tr>
-                                        <td align="right">
-                                            订单号：
-                                        </td>
-                                        <td>
-                                            <input type="text" id="onum" name="onum" class="input" />
-                                        </td>
+                                        <td align="right">订单号：</td>
+                                        <td><input type="text" id="onum" name="onum" class="input" /></td>
                                     </tr>
                                     <tr>
-                                        <td>
-                                        </td>
+                                        <td>&nbsp;</td>
                                         <td>
                                             <input type="button" value="" class="btn_cx" onClick="return chekq(this)" />
                                             <input type="hidden" name="action" value="query" />
@@ -72,10 +81,12 @@
             </div>
             <div id="ft">
                 <dl id="foot">
-                    <dd>Tel：<a href="/home/about/">0771-5676920 0771-5676753</a></dd>
-                    <div class="clear"></div>
+                    <dt><a href="/home/about/">关于我们</a></dt>
+                    <dd>Tel：0771-5676920 0771-5676753</dd>
+                    <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
                 </dl>
             </div>
+            <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
         </div>
     </body>
 </html>
